EFK/logging-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
    kubernetes.io/ingress.class: kong
  name: logging-ingress
  namespace: logging
spec:
  rules:
  - host: kibana.datochain.com
    http:
      paths:
      - path: /
        backend:
            serviceName: kibana-kibana
            servicePort: 5601
